Se termina el menu y se implementa la clase Intranet con sus métodos asociados.